#
#

SUBDIRS = bzlib XML zlib

EXTRA_DIST =	AnimTrack.h		AssocVector.h \
		stdafx.cpp \
		stdafx.h		ViddBasic.cpp \
		ViddBasic.h		ViddController.cpp \
		ViddController.h	ViddElementTrack.cpp \
		ViddElementTrack.h	ViddEventTrack.cpp \
		ViddEventTrack.h	ViddFile.cpp \
		ViddFile.h		ViddPlayer.cpp \
		ViddPlayer.h		ViddRecorder.cpp \
		ViddRecorder.h		ViddSys.cpp \
		ViddSys.h		ViddTypedPropertyTracks.h

